--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t VarshaUnni/docker-react -f Dockerfile.dev .
+  - docker build -t varshaunni/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true VarshaUnni/docker-react npm run test
+  - docker run -e CI=true varshaunni/docker-react npm run test
